# skyhook

./: .cfnlintrc  .gitignore  CLAUDE.md  Dockerfile.docs  Makefile  README.md  WARP.md  architecture.md  conformance_report.md  debug-pod-grep.yaml  debug-pod-hostnet.yaml  debug-pod.yaml  karpenter-changes-summary.md  karpenter-test-helmrepository.yaml  mkdocs.yml  pyproject.toml  requirements-docs.txt  test-pod.yaml
cluster/: Makefile  README.md  eksctl-template.yaml  iam-cluster.yaml  nth-queue.yaml
cluster/.generated/: aws-lb-controller-values.yaml  ebs-csi-values.yaml  efs-csi-values.yaml  external-dns-values.yaml  fluent-bit-values.yaml  fsx-csi-values.yaml  k8sgpt-values.yaml  karpenter-values.yaml  keda-values.yaml  nth-values.yaml  secrets-store-csi-values.yaml  skyhook-accel-usw2-v42.yaml  skyhook-accel-usw2-v43.yaml  skyhook-accel-usw2-v69.yaml
debug/: debug-pod-grep-2.yaml  debug-pod-grep-3.yaml  karpenter-test-helmrelease.yaml
docs/: index.md
docs/High Performance Compute as a Service System Design/: 02_storage_trilemma.mmd  03_storage_dataflow.mmd  05_karpenter_provisioning.mmd  06_kyverno_automation.mmd  08_soci_image_loading.mmd  architecture_notes.md  implementation_plan.md  slide_content.md
docs/design/: nth-sqs-architecture.md
docs/guides/: checkpointing.md  debugging.md  multi-node.md  quick-start.md
foundation/: Makefile  README.md
platform/: Makefile  README.md
scripts/: quick-logs.sh  tail-karpenter-logs.sh
site/: 404.html  index.html  sitemap.xml
tests/: test_karpenter.py  test_namespaces.py  test_networking.py  test_storage.py
(+115 files in other folders)
